# rust-vlc-demux

./: Cargo.toml  README.md  TODO.md  build.rs  copy.sh  notes.md  play.sh  test_plugin.sh
assets/: wav.c  wav_preprocessed.c
src/: ffi.rs  lib.rs  traits.rs  types.rs  vlc.rs  wrapper.c
