[package]
name = "rustdemux_plugin"
version = "0.1.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>", "Guillaume Gomez <guillaume1.gomez@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
libc = "0.2.0"
nom  = "1.2.3"
va_list-rs = { git = "https://github.com/GuillaumeGomez/va_list-rs" }

[dependencies.flavors]
git = "https://github.com/Geal/flavors"
